--- a/about-EN.html
+++ b/about-EN.html
@@ -55,14 +55,14 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
                             <li><a class="dropdown-item" href="Espanol/about-ES.html">Español</a></li>
-                            <li><a class="dropdown-item" href="index.html">English</a></li>
+                            <li><a class="dropdown-item" href="about-EN.html">English</a></li>
                             <li><a class="dropdown-item" href="Italiano/about-IT.html">Italian</a></li>
                         </ul>
                     </div>
                     <!--Language Change Movile-->
                     <div class="lang-movil" id="lang-movil">
                         <li><a class="dropdown-item" href="Espanol/about-ES.html">ES</a></li>
-                        <li><a class="dropdown-item" href="index.html">EN</a></li>
+                        <li><a class="dropdown-item" href="about-EN.html">EN</a></li>
                         <li><a class="dropdown-item" href="Italiano/about-ES.html">IT</a></li>
                     </div>
                 </a>
@@ -146,7 +146,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
-                            <img src="img/me.jpg" class="img-fluid" alt="">
+                            <img src="img/me.jpg" class="img-fluid" alt="picture from top of a foot stepping into a tree">
                         </div>
                         <div class="col-lg-6">
                             <h3>A little of me</h3>
