--- a/coco-EN.html
+++ b/coco-EN.html
@@ -158,25 +158,25 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-04.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-04.png" alt="Product family of coconuts milk packaging">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-01.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-01.png" alt="Details of coconuts milks packaging">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-02.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-02.png" alt="Sachekts of coconuts milks packaging">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-03.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-03.png" alt="Botle of coconuts milks packaging">
                                     </div>                                                                       
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-05.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-05.png" alt="Details of coconuts milks packaging">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-06.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-06.png" alt="Dates Details of coconuts milks packaging">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/envace/coco-07.png" alt="">
+                                        <img src="img/Portfolio/coconut/envace/coco-07.png" alt="Box details of coconuts milks packaging">
                                     </div>                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -213,22 +213,22 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-01.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-01.png" alt="Render of the coconuts Stan exibition">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-02.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-02.png" alt="Coconuts Stan exibition">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-03.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-03.png" alt="Detail of Coconuts Stan exibition">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-04.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-04.png" alt="Coconuts Stan exibition">
                                     </div>                                                                       
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-05.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-05.png" alt="One side of Coconuts Stan exibition">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-06.png" alt="">
+                                        <img src="img/Portfolio/coconut/Leche de coco - Stand/cocoStan-06.png" alt="Coconuts Stan exibition from top">
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
