--- a/interieur-EN.html
+++ b/interieur-EN.html
@@ -156,25 +156,25 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">                                                        
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice4.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice4.jpg" alt="Knolls Horsepower Workstation for four">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice5.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice5.jpg" alt="Multiple Knolls Horsepower Workstation">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice6.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice6.jpg" alt="Office Knolls Horsepower Workstation">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice7.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice7.jpg" alt="Single Knolls Horsepower Workstation">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice1.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice1.jpg" alt="Autocad bluepirnts for Knolls Horsepower Workstation">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice2.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice2.jpg" alt="Details Autocad bluepirnts for Knolls Horsepower Workstation">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/interieur/bice3.jpg" alt="">
+                                        <img src="img/Portfolio/interieur/bice3.jpg" alt="Autocad bluepirnts for Knolls Horsepower Workstation">
                                     </div>                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
