--- a/renders-IT.html
+++ b/renders-IT.html
@@ -54,16 +54,16 @@
                         <img src="../img/icons/lang.png" alt="Icono de Lenguaje" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="../Espanol/vertigoPrototype-ES.html">Español</a></li>
-                        <li><a class="dropdown-item" href="../vertigoPrototype-EN.html">English</a></li>
-                        <li><a class="dropdown-item" href="../Italiano/vertigoPrototype-IT.html">Italian</a></li>
+                        <li><a class="dropdown-item" href="../Espanol/renders-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="../renders-EN.html">English</a></li>
+                        <li><a class="dropdown-item" href="../Italiano/renders-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="../Espanol/vertigoPrototype-ES.html">ES</a></li>
-                    <li><a class="dropdown-item" href="../vertigoPrototype-EN.html">EN</a></li>
-                    <li><a class="dropdown-item" href="../Italiano/vertigoPrototype-IT.html">IT</a></li>
+                    <li><a class="dropdown-item" href="../Espanol/renders-ES">ES</a></li>
+                    <li><a class="dropdown-item" href="../renders-EN.html">EN</a></li>
+                    <li><a class="dropdown-item" href="../Italiano/renders-IT.html">IT</a></li>
                 </div>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
