--- a/vertigoPrototype-EN.html
+++ b/vertigoPrototype-EN.html
@@ -157,19 +157,19 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/vertigo/vertigoP4.png" alt="">
+                                        <img src="img/Portfolio/vertigo/vertigoP4.png" alt="Building Window cleaning sistem">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/vertigo/vertigoP2.png" alt="">
+                                        <img src="img/Portfolio/vertigo/vertigoP2.png" alt="Building Window cleaning sistem">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/vertigo/vertigoP3.png" alt="">
+                                        <img src="img/Portfolio/vertigo/vertigoP3.png" alt="Building Window cleaning sistem">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/vertigo/vertigoP1.png" alt="">
+                                        <img src="img/Portfolio/vertigo/vertigoP1.png" alt="Building Window cleaning sistem">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="img/Portfolio/vertigo/vertigoP5.png" alt="">
+                                        <img src="img/Portfolio/vertigo/vertigoP5.png" alt="Building Window cleaning sistem">
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
