--- a/Espanol/index-ES.html
+++ b/Espanol/index-ES.html
@@ -234,7 +234,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model stand metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg"> 
-                                        <img src="../img/portfolio/01-vertigo.png" class="img-responsive" alt="Vertigo: Desarrollo de limpiavidrios">
+                                        <img src="../img/Portfolio/01-vertigo.png" class="img-responsive" alt="Vertigo: Desarrollo de limpiavidrios">
                                         <div class="cap1">
                                             <h3>Vertigo</h3>
                                             <p>Desarrollo de limpiavidrios</p>
@@ -249,7 +249,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-bike.png" class="img-responsive" alt="Diseño y presentacion de bicicletero para Montevideo (Uruguay)">
+                                    <img src="../img/Portfolio/01-bike.png" class="img-responsive" alt="Diseño y presentacion de bicicletero para Montevideo (Uruguay)">
                                     <div class="cap1">
                                         <h3>Biciletero</h3>
                                         <p>Diseño y presentacion de bicicletero para Montevideo (Uruguay)</p>
@@ -265,7 +265,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-render.png" class="img-responsive" alt="Modelos 3D & Renders">
+                                    <img src="../img/Portfolio/01-render.png" class="img-responsive" alt="Modelos 3D & Renders">
                                     <div class="cap1">
                                         <h3>Modelos 3D & Renders</h3>
                                         <p>Solidworks& Keyshot</p>
@@ -280,7 +280,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-metal.png" class="img-responsive" alt="Corte laser y plegado CNC">
+                                    <img src="../img/Portfolio/01-metal.png" class="img-responsive" alt="Corte laser y plegado CNC">
                                     <div class="cap1">
                                         <h3>Diseño de metal</h3>
                                         <p>Corte laser y plegado CNC</p>
@@ -295,7 +295,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image stand model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-stanCva.png" class="img-responsive" alt="Diseño de exibido de stan">
+                                    <img src="../img/Portfolio/01-stanCva.png" class="img-responsive" alt="Diseño de exibido de stan">
                                     <div class="cap1">
                                         <h3 class="h3-mob">CVA SA</h3>
                                         <p class="p-mob">Diseño de exibido de stan</p>
@@ -310,7 +310,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image packaging model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-pack.png" class="img-responsive" alt="Diseño y desarrollo de packaging">
+                                    <img src="../img/Portfolio/01-pack.png" class="img-responsive" alt="Diseño y desarrollo de packaging">
                                     <div class="cap1">
                                         <h3>Leche de coco</h3>
                                         <p>Diseño y desarrollo de packaging</p>
@@ -325,7 +325,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-renderCVA.png" class="img-responsive" alt="Carrito para soporte de reuedas de un auto">
+                                    <img src="../img/Portfolio/01-renderCVA.png" class="img-responsive" alt="Carrito para soporte de reuedas de un auto">
                                     <div class="cap1">
                                         <h3>Dobijo 3D para CVA SA</h3>
                                         <p>Modelados 3D & Renders</p>
@@ -340,7 +340,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-upa.png" class="img-responsive" alt="Mochila porta bebes">
+                                    <img src="../img/Portfolio/01-upa.png" class="img-responsive" alt="Mochila porta bebes">
                                     <div class="cap1">
                                         <h3>UPA!</h3>
                                         <p>Mochila porta bebes</p>
@@ -355,7 +355,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-dandii.png" class="img-responsive" alt="Deshidaratadora de frutas">
+                                    <img src="../img/Portfolio/01-dandii.png" class="img-responsive" alt="Deshidaratadora de frutas">
                                     <div class="cap1">
                                         <h3  class="h3-mob">Dandii</h3>
                                         <p class="p-mob">Deshidaratadora de frutas</p>
@@ -370,7 +370,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-inter.png" class="img-responsive" alt="Puestos de trabajo con diseño Knoll">
+                                    <img src="../img/Portfolio/01-inter.png" class="img-responsive" alt="Puestos de trabajo con diseño Knoll">
                                     <div class="cap1">
                                         <h3>Mobiliario de oficina</h3>
                                         <p>Puestos de trabajo con diseño Knoll</p>
@@ -385,7 +385,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="../img/portfolio/01-stan.png" class="img-responsive" alt="Diseñod de stand exibidor para leched e coco">
+                                    <img src="../img/Portfolio/01-stan.png" class="img-responsive" alt="Diseñod de stand exibidor para leched e coco">
                                     <div class="cap1">
                                         <h3>Leche de coco</h3>
                                         <p>Diseño de stand</p>
