--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                             Portfolio
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
                             <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
                             <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
                             <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
@@ -223,6 +224,7 @@
                     <li>
                     <ol class="type nav footer-main-links row text-center">
                         <li class="nav-item col-3 col-md"><a href="" data-filter="*" class="active">All</a></li>
+                        <li class="nav-item col-3 col-md"><a href="" data-filter=".web">Web</a></li>
                         <li class="nav-item col-3 col-md"><a href="" data-filter=".model">Model Design</a></li>
                         <li class="nav-item col-3 col-md"><a href="" data-filter=".stand">Exibition</a></li>
                         <li class="nav-item col-3 col-md"><a href="" data-filter=".prototype">Prototypes</a></li>
@@ -236,6 +238,21 @@
                 
                 <div class="row">
                     <div class="portfolio-items text-center">  
+
+                        <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
+                            <div class="portfolio-item">
+                                <div class="hover-bg"> 
+                                        <img src="img/Portfolio/APL-01.JPG" class="img-responsive" alt="Vertigo: window cleanning sistem">
+                                        <div class="cap1">
+                                            <h3>Arte Para Llevar</h3>
+                                            <p>Design & Develop of a website</p>
+                                        </div>
+                                        <div class="cap2">
+                                            <a href="https://solep.github.io/ArteParaLlevar/"  target="blank"><p class="text-center">See more</p></a>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model stand metal">
                             <div class="portfolio-item">
