--- a/about-EN.html
+++ b/about-EN.html
@@ -85,6 +85,8 @@
                                 Portfolio
                             </a> 
                             <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
+                                <li><a class="dropdown-item" href="deli.html">Delicatessen</a></li>
                                 <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
                                 <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
                                 <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
