--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -90,6 +90,8 @@
                             Portfolio
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
+                            <li><a class="dropdown-item" href="deli.html">Delicatessen</a></li>
                             <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
                             <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
                             <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
@@ -148,7 +150,35 @@
         <!--======= FIN Breadcrumbs=======-->
         <!--=========Portfolio=========-->
         <section class="portfolio" id="portfolio"> 
-            <div class="gallery-wrap">            
+            <div class="gallery-wrap">         
+                <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg"> 
+                                <img src="img/Portfolio/APL-01.JPG" class="img-responsive" alt="Vertigo: window cleanning sistem">
+                                <div class="cap1">
+                                    <h3>Arte Para Llevar</h3>
+                                    <p>Design & Develop of a website</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="https://solep.github.io/ArteParaLlevar/"  target="blank"><p class="text-center">See more</p></a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg"> 
+                                <img src="img/Portfolio/Deli-01.jpg" class="img-responsive" alt="Vertigo: window cleanning sistem">
+                                <div class="cap1">
+                                    <h3>Delicatessen</h3>
+                                    <p>Design & Develop of Menu</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="deli-En.html"  target="blank"><p class="text-center">See more</p></a>
+                                </div>
+                        </div>
+                    </div>
+                </div>   
                 <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
                         <img class="port-image" src="img/Portfolio/vertigo/vertigo1-01.png" alt="Prototype of a window cleaner"/>
