--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -115,7 +115,7 @@
             <div class="socialMedia" id="socialMedia">
                 <ul class="navbar-nav flex-row ms-md-auto justify-content-flex-end">                  
                     <li class="nav-item">
-                        <a href="https://www.behance.net/soleadadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
+                        <a href="https://www.behance.net/soledadpriano/" target="blank"><i class="fab fa-behance-square"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.linkedin.com/in/soledad-priano/" target="blank"><i class="fab fa-linkedin"></i></a>
@@ -150,7 +150,21 @@
         <!--======= FIN Breadcrumbs=======-->
         <!--=========Portfolio=========-->
         <section class="portfolio" id="portfolio"> 
-            <div class="gallery-wrap">         
+            <div class="gallery-wrap">
+                 <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg"> 
+                                <img src="img/Portfolio/RD-01.JPG" class="img-responsive" alt="Engineering design">
+                                <div class="cap1">
+                                    <h3>Engineering Design</h3>
+                                    <p>Research and development (R&D)</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="https://solep.github.io/RD/"  target="blank"><p class="text-center">See more</p></a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
                     <div class="portfolio-item">
                         <div class="hover-bg"> 
