--- a/about-EN.html
+++ b/about-EN.html
@@ -110,7 +110,7 @@
                 <div class="socialMedia" id="socialMedia">
                     <ul class="navbar-nav flex-row ms-md-auto justify-content-flex-end">                  
                         <li class="nav-item">
-                            <a href="https://www.behance.net/soleadadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
+                            <a href="https://www.behance.net/soledadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
                         </li>
                         <li class="nav-item">
                             <a href="https://www.linkedin.com/in/soledad-priano/" target="blank"><i class="fab fa-linkedin"></i></a>
@@ -280,4 +280,5 @@
         </footer>
         <!--=========FIN Footer=========-->
     </body>
+
 </html> 
