--- a/about-EN.html
+++ b/about-EN.html
@@ -85,6 +85,7 @@
                                 Portfolio
                             </a> 
                             <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="RD.html">Industrial Design & Manufacturing</a></li>
                                 <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
                                 <li><a class="dropdown-item" href="deli.html">Delicatessen</a></li>
                                 <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
@@ -235,7 +236,7 @@
                 <div class="footer-top container">
                     <div class="footer-contact">
                         <h4>Soledad Priano</h4>
-                        <p>Industrial Designer</p>
+                        <p>Industrial Design & Manufacturing</p>
                         <strong>Email:</strong> soledadpriano@gmail.com<br>
                     </div>
                 </div>               
@@ -282,3 +283,4 @@
     </body>
 
 </html> 
+
